force-app/main/default/objects/MGAgencia_Integration_Setting__mdt/MGAgencia_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Configuración Integración MGAgencia</label>
    <pluralLabel>Configuraciones Integración MGAgencia</pluralLabel>
</CustomObject>