force-app/main/default/objects/MGAgencia_Integration_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si esta configuración de integración está activa.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>