force-app/main/default/objects/MGAgencia_Integration_Setting__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Valor fijo de Brand__c para los Leads creados por la integración.</description>
    <label>Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>