force-app/main/default/objects/MGAgencia_Integration_Setting__mdt/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>Valor fijo de Family__c para los Leads creados por la integración.</description>
    <label>Familia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>