force-app/main/default/objects/MGAgencia_Integration_Setting__mdt/fields/Initial_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status__c</fullName>
    <description>Estado inicial del Lead al ser creado por la integración.</description>
    <label>Estado Inicial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>