force-app/main/default/objects/MGAgencia_Integration_Setting__mdt/fields/Queue_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Queue_DeveloperName__c</fullName>
    <description>Nombre de desarrollador de la cola propietaria de los Leads creados por la integración.</description>
    <label>Cola (Developer Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>